Release 1.11

#66 LinkRestExceptionMapper should log exception stack traces at DEBUG level

Release 1.10 2014-12-08

#55 Object matching fails when callers do not use correct implicit ID type 
#57 Support for Long IDs in updates
#60 Ignore 'query' parameter when no property to match is specified
#61 Upgrade to to Cayenne 4.0.M2.1ab1caa

Release 1.9 2014-11-24

#52 Removing hard size limit for 'cayenneExp'
#56 Upgrade to to Cayenne 4.0.M2.fba700d

Release 1.8 2014-10-14

#43 upgrade to Jersey 2.12, jackson 2.4.2
#46 Sencha: update objects order is important on bulk updates
#47 support for Filter operator option
#48 Support for implicit propagated ids on create/update
#49 IRelationshipMapper should use relationship name by default

Release 1.7 2014-09-05

#29 Batch lookup of relationship objects.
#38 'idempotentFullSync' method to synchronize collections
#40 Optionally suppress entity bodies on update requests
#41 rename CreateOrUpdateBuilder to just UpdateBuilder

Release 1.6 2014-08-29

#36 StackOverflow on compiling circular constraint annotations
#37 Redesign default constraints as EntityConstraint's

Release 1.5 2014-08-28

#9 Chatty merging of config
#30 Add type generic parameter to TreeConstraint
#31 Customizable request chain
#32 Support for default per-entity constraints
#33 EncoderService: Do not include related_id property by default
#34 Remove @AnyRole annotation
#35 Annotations for default constraints

Release 1.4 2014-08-22

#25 forSelectRelated/constraints causes unqualified fetch ; 
#26 Refactor delete operation to DeleteBuilder with "delete by id" and "delete by parent" options.
#27 ID that is not a PK can't be used in idempotent requests
	Refactor 'forSelectRelated' to be setup inside SelectBuilder 

Release 1.3 2014-08-20

#7 Allow TreeConstraints to be applied to insert/update requests 
#17 Support "group" as an object
#18 CreateOrUpdateBuilder
#19 Backend support for batch updates of a single entity